--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             width: 300px;
             height: 450px;
             background: white;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
             padding: 20px;
@@ -40,7 +40,7 @@
 
         .card .top-left .spade,
         .card .bottom-right .spade {
-            font-size: 48px;
+            font-size: 55px;
             display: block;
         }
 
@@ -55,11 +55,11 @@
         }
 
         .card .center .spade-large {
-            font-size: 100px;
+            font-size: 150px;
         }
 
         .card .center h1 {
-            font-family: 'Georgia', serif;
+            font-family: 'Monsieur La Doulaise';
             font-size: 36px;
             margin: 10px 0;
         }
